add fix and README.md

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,3 +4,16 @@ server.port=18082
 # The BookShelf service base URL
 book.shelf.url=http://localhost:18083
 logging.level.com.demo.demotestjars.client.BookShelfClient=DEBUG
+
+spring.datasource.url=jdbc:h2:tcp://localhost:9092/mem:bookshelf
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# JPA/Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# Liquibase
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
