--- a/src/test/resources/book-shelf.properties
+++ b/src/test/resources/book-shelf.properties
@@ -1,4 +1,10 @@
-spring.profiles.active=integration
 server.port=18083
 
 spring.datasource.url=jdbc:h2:tcp://localhost:9092/mem:bookshelf
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
